--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -345,7 +345,7 @@
             <objects>
                 <viewController id="BGh-Vc-M4e" customClass="EditProfileViewController" customModule="Quaranteen_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="abh-SU-BNy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VLL-L4-9yP">
@@ -354,21 +354,6 @@
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
                                         <fragment content="cancel">
-                                            <attributes>
-                                                <color key="NSColor" red="0.86955851319999999" green="0.48523223399999998" blue="0.25873091819999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <font key="NSFont" metaFont="system" size="20"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fer-Yf-mhh">
-                                <rect key="frame" x="324" y="77" width="46" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="done">
                                             <attributes>
                                                 <color key="NSColor" red="0.86955851319999999" green="0.48523223399999998" blue="0.25873091819999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <font key="NSFont" metaFont="system" size="20"/>
@@ -591,14 +576,16 @@
                                 </state>
                                 <connections>
                                     <action selector="tappedEditProfile:" destination="Fh7-A1-Xyx" eventType="touchUpInside" id="k8m-04-G6Z"/>
-                                    <segue destination="BGh-Vc-M4e" kind="presentation" modalPresentationStyle="fullScreen" id="vW9-jb-GLG"/>
+                                    <segue destination="BGh-Vc-M4e" kind="show" id="NEe-ob-efb"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="TrO-8C-i9k"/>
                     </view>
-                    <navigationItem key="navigationItem" id="x8q-dH-yvu"/>
+                    <navigationItem key="navigationItem" id="x8q-dH-yvu">
+                        <barButtonItem key="backBarButtonItem" title="cancel" id="SAy-QW-Wnr"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="editProfileButton" destination="uKB-f7-Ga7" id="ecF-5n-SYD"/>
                         <outlet property="frogName" destination="1s2-QQ-XSM" id="hgk-UA-isv"/>
@@ -1100,6 +1087,7 @@
         <!--Profile-->
         <scene sceneID="2jk-lN-QKL">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NUS-Vd-Xn0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DCb-EB-x6A" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" image="person.crop.circle" catalog="system" selectedImage="person.crop.circle" id="d89-kh-z5x">
                         <color key="badgeColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1117,9 +1105,8 @@
                         <segue destination="Fh7-A1-Xyx" kind="relationship" relationship="rootViewController" id="BMO-Wx-FJt"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NUS-Vd-Xn0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="311.59420289855075" y="2021.6517857142856"/>
+            <point key="canvasLocation" x="161" y="2011"/>
         </scene>
     </scenes>
     <resources>
